# rag-arena

./: .env.example  .gitignore  LICENSE  README.md  env.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  middleware.ts  page.tsx
app/actions/: playground.ts  voting-system.ts
app/ingest/: page.tsx
app/leaderboard/: page.tsx  realtime-score.tsx
app/pagetest/: page.tsx
app/voters/: page.tsx
components/: use-mail.ts
lib/: aplyToaster.ts  constants.ts  handleSubmit.ts  queryClient.ts  supabase.ts  types.ts  utils.ts  zustand.ts
python_service/: Dockerfile  README.md  app.py  docker-compose.yml  pg_parser.py  pyproject.toml  requirements.txt  waitress_server.py
python_service/playground/text_splitters/: split_by_character.py
python_service/retrievers/: auto_merging_retriever.py  bm25_retriever.py  dummy_retriever.py  hybrid_retriever.py  neo4j_retriever.py  reciprocal_rerank_fusion.py  test.py  vector_retriever.py
python_service/retrievers/data/: graham.txt
python_service/retrievers/data/chunks/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+218 more)
python_service/retrievers/scripts/: install.py
python_service/supabase_functions/: get_documents.py
python_service/transformations/: docs_to_llama_index.py
(+107 files in other folders)
